Fixed overflow problem of home screen. Mobile should work better now

--- a/frontend/src/App/styles/screens/_home.scss
+++ b/frontend/src/App/styles/screens/_home.scss
@@ -3,6 +3,7 @@
     @include flexCenterCenter($justify-content: space-between);
     padding: 3rem;
     position: relative;
+    overflow: hidden;
 
     &__container {
         &--left {
